--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,15 @@ dependencies {
     //firebase
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
-    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
+
+    //Material
+    implementation 'com.google.android.material:material:1.2.0-beta01'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+
 }
