--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,13 +53,17 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
 
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
+
     //Material
     implementation 'com.google.android.material:material:1.2.0-beta01'
 
+    //Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    //google
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
 
 }
